<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/root_container_padding"
    android:paddingRight="@dimen/root_container_padding"
    tools:context="pl.marcinwroblewski.zs6sobieski.Rekrutacja"
    android:id="@+id/root_container"
    android:background="@color/white">


    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="REKRUTACJA"
        style="@style/activity_title"/>


    <ScrollView
        android:layout_below="@id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/main_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/control_height">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding_tablet"
                    android:text="@string/rekrutacja_header_text"
                    android:gravity="center"
                    android:textStyle="bold"

                    android:textSize="@dimen/title_text"
                    android:textColor="@color/dark_grey"/>


                <TextView
                    android:id="@+id/content1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header"
                    android:padding="@dimen/text_padding_tablet"
                    android:text="@string/rekrutacja_content1"
                    android:textSize="@dimen/default_text"
                    android:textColor="@color/white"
                    android:background="@color/blue"
                    />

            <TextView
                android:id="@+id/content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content1"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content2"
                android:textSize="@dimen/default_text"
                android:textColor="@color/white"
                android:background="@color/orange"
                />

            <TextView
                android:id="@+id/content3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content2"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content3"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                android:background="@color/light_grey"
                />

            <TextView
                android:id="@+id/content4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content3"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content4"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/content5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content4"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content5"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                android:background="@color/light_grey"
                />

            <TextView
                android:id="@+id/content6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content5"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content6"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/content7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content6"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content7"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                android:background="@color/light_grey"
                />


            <TextView
                android:id="@+id/content8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content7"
                android:padding="@dimen/text_padding_tablet"
                android:text="@string/rekrutacja_content8"
                android:textSize="@dimen/default_text"
                android:textColor="@color/white"
                android:background="@color/red"
                android:gravity="center"

                />




            <TextView
                android:id="@+id/content9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content8"
                android:padding="@dimen/text_padding_tablet"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rekrutacja_content9"
                android:textSize="@dimen/default_text"
                android:textColor="@color/white"
                android:background="@color/blue"

                />

            <TextView
                android:id="@+id/content10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content9"
                android:padding="@dimen/minor_text_padding"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rekrutacja_content10"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/content11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content10"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content11"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:background="@color/light_grey"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/content12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content11"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content12"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                />


            <TextView
                android:id="@+id/content13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content12"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content13"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:background="@color/light_grey"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/content14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content13"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content14"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                />


            <TextView
                android:id="@+id/content15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content14"
                android:padding="@dimen/text_padding_tablet"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rekrutacja_content15"
                android:textSize="@dimen/default_text"
                android:textColor="@color/white"
                android:background="@color/blue"

                />

            <TextView
                android:id="@+id/content16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content15"
                android:padding="@dimen/text_padding_tablet"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rekrutacja_content16"
                android:textSize="@dimen/default_text"
                android:textColor="@color/white"
                android:background="@color/blue"

                />

            <TextView
                android:id="@+id/content17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content16"
                android:padding="@dimen/text_padding_tablet"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/rekrutacja_content17"
                android:textSize="@dimen/default_text"
                android:textColor="@color/white"
                android:background="@color/blue"

                />


            <TextView
                android:id="@+id/content18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content17"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content18"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:background="@color/light_grey"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/content19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content18"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content19"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:gravity="center"
                />


            <TextView
                android:id="@+id/content20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content19"
                android:padding="@dimen/minor_text_padding"
                android:text="@string/rekrutacja_content20"
                android:textSize="@dimen/default_text"
                android:textColor="@color/dark_grey"
                android:background="@color/light_grey"
                android:gravity="center"
                />

        </RelativeLayout>


    </ScrollView>



</RelativeLayout>
